--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -1,19 +1,19 @@
 <ion-tabs>
 
   <ion-tab-bar slot="bottom">
-    <ion-tab-button tab="tab1">
-      <ion-icon aria-hidden="true" name="triangle"></ion-icon>
-      <ion-label>Tab 1</ion-label>
+    <ion-tab-button tab="tab1" #tab1>
+      <ion-icon [name]="tab1.selected ? 'home' : 'home-outline'"></ion-icon>
+      <ion-label>Home</ion-label>
     </ion-tab-button>
 
-    <ion-tab-button tab="tab2">
-      <ion-icon aria-hidden="true" name="ellipse"></ion-icon>
-      <ion-label>Tab 2</ion-label>
+    <ion-tab-button tab="tab2" #tab2>
+      <ion-icon [name]="tab2.selected ? 'search' : 'search-outline'"></ion-icon>
+      <ion-label>Discover</ion-label>
     </ion-tab-button>
 
-    <ion-tab-button tab="tab3">
-      <ion-icon aria-hidden="true" name="square"></ion-icon>
-      <ion-label>Tab 3</ion-label>
+    <ion-tab-button tab="tab3" #tab3>
+      <ion-icon [name]="tab3.selected ? 'bookmark' : 'bookmark-outline'"></ion-icon>
+      <ion-label>Watchlist</ion-label>
     </ion-tab-button>
   </ion-tab-bar>
 
